--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="%PUBLIC_URL%/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="%PUBLIC_URL%/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="%PUBLIC_URL%/favicon-16x16.png"
-    />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+<!--    <link-->
+<!--      rel="apple-touch-icon"-->
+<!--      sizes="180x180"-->
+<!--      href="%PUBLIC_URL%/apple-touch-icon.png"-->
+<!--    />-->
+<!--    <link-->
+<!--      rel="icon"-->
+<!--      type="image/png"-->
+<!--      sizes="32x32"-->
+<!--      href="%PUBLIC_URL%/favicon-32x32.png"-->
+<!--    />-->
+<!--    <link-->
+<!--      rel="icon"-->
+<!--      type="image/png"-->
+<!--      sizes="16x16"-->
+<!--      href="%PUBLIC_URL%/favicon-16x16.png"-->
+<!--    />-->
+<!--    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Amit's Portfolio - ReactJS"
+      content="The Phone Repair Cafe - ReactJS"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -54,7 +54,7 @@
       content="minimum-scale=1, initial-scale=1, width=device-width"
     />
 
-    <title>Amit Kumar</title>
+    <title>The Phone Repair Cafe</title>
   </head>
   <body style="background-color: #f5f5f5">
     <noscript>You need to enable JavaScript to run this app.</noscript>
