--- a/public/index.html
+++ b/public/index.html
@@ -59,6 +59,7 @@
   <body style="background-color: #f5f5f5">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <img src="https://visitor-badge.glitch.me/badge?page_id=page.id" alt="visitor badge"/>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
